docs/kubernetes/EKS/networking/files/demo/namespace-b.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-b
  labels:
    role: frontend-b
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-b
  namespace: namespace-b
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    role: frontend-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-b
  namespace: namespace-b
spec:
  selector:
    matchLabels:
      role: frontend-b
  replicas: 1
  template:
    metadata:
      labels:
        role: frontend-b 
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: frontend-b
        ports:
        - containerPort: 80
